# StandaloneGBP

./: CMakeLists.txt  README.md
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PhysicsListMessenger.hh  PlaneSD.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StackingAction.hh  StepMax.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh  myAnalysisManager.hh  myHit.hh  mySD.hh  planeHit.hh
macros/: allpix_check.mac  gammaconversion.mac  gaussianBeam.mac  importBeam.mac  share.mac  vis.mac
root6/: macro.cpp  rootlogon.c  tools.cpp
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysListEmStandard.cc  PhysicsList.cc  PhysicsListMessenger.cc  PlaneSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  StackingAction.cc  StandaloneGBP.cc  StepMax.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc  myAnalysisManager.cc  myHit.cc  mySD.cc  planeHit.cc
